// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmDecryptMessage Component matches snapshot 1`] = `
<div>
  <div
    class="request-decrypt-message__container"
  >
    <div
      class="request-decrypt-message__header"
    >
      <div
        class="request-decrypt-message__header-background"
      />
      <div
        class="request-decrypt-message__header__text"
      >
        Decrypt request
      </div>
      <div
        class="request-decrypt-message__header__tip-container"
      >
        <div
          class="request-decrypt-message__header__tip"
        />
      </div>
    </div>
    <div
      class="request-decrypt-message__body"
    >
      <div
        class="request-decrypt-message__account-info"
      >
        <div
          class="request-decrypt-message__account"
        >
          <div
            class="request-decrypt-message__account-text"
          >
            Account:
          </div>
          <div
            class="request-decrypt-message__account-item"
          >
            <div
              class="account-list-item undefined"
              data-testid="account-list-item"
            >
              <div
                class="account-list-item__top-row items-center gap-2"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-md h-6 w-6"
                >
                  <div
                    class="flex [&>div]:!rounded-none"
                  >
                    <div
                      style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 24px; height: 24px; display: inline-block; background: rgb(250, 58, 0);"
                    >
                      <svg
                        height="24"
                        width="24"
                        x="0"
                        y="0"
                      >
                        <rect
                          fill="#18CDF2"
                          height="24"
                          transform="translate(-0.78629512784545 -2.47821305209537) rotate(328.9 12.00000000000000 12.00000000000000)"
                          width="24"
                          x="0"
                          y="0"
                        />
                        <rect
                          fill="#035E56"
                          height="24"
                          transform="translate(-13.72384628162403 7.94434640381145) rotate(176.2 12.00000000000000 12.00000000000000)"
                          width="24"
                          x="0"
                          y="0"
                        />
                        <rect
                          fill="#F26602"
                          height="24"
                          transform="translate(12.50088151366794 -10.65385479224781) rotate(468.9 12.00000000000000 12.00000000000000)"
                          width="24"
                          x="0"
                          y="0"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="account-list-item__account-name"
                >
                  Test Account
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="request-decrypt-message__balance"
        >
          <div
            class="request-decrypt-message__balance-text"
          >
            Balance:
          </div>
          <div
            class="request-decrypt-message__balance-value"
          >
            966.987986 ETH
          </div>
        </div>
      </div>
      <div
        class="request-decrypt-message__visual"
      >
        <section>
          <i
            class="request-decrypt-message__visual-identicon--default"
          >
            T
          </i>
          <div
            class="request-decrypt-message__notice"
          >
            test would like to read this message to complete your action
          </div>
        </section>
      </div>
      <div
        class="request-decrypt-message__message-container"
      >
        <div
          class="request-decrypt-message__message"
        >
          <div
            class="request-decrypt-message__message-text"
          >
            {"domain":{"chainId":97,"name":"Ether Mail","verifyingContract":"0xCcCCccccCCCCcCCCCCCcCcCccCcCCCcCcccccccC","version":"1"}}
            
          </div>
          <div
            class="request-decrypt-message__message-cover"
          />
          <div
            class="request-decrypt-message__message-lock"
            data-testid="message-lock"
          >
            <div
              class="request-decrypt-message__message-lock__container"
            >
              <i
                class="fa fa-lock fa-lg request-decrypt-message__message-lock__container__icon"
              />
              <div
                class="request-decrypt-message__message-lock__container__text"
              >
                Decrypt message
              </div>
            </div>
          </div>
        </div>
        <div />
      </div>
    </div>
    <div
      class="page-container__footer"
    >
      <footer>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block page-container__footer-button page-container__footer-button__cancel mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-muted mm-box--rounded-xl"
          data-testid="page-container-footer-cancel"
        >
          Cancel
        </button>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block page-container__footer-button mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-inverse mm-box--background-color-icon-default mm-box--rounded-xl"
          data-testid="page-container-footer-next"
        >
          Decrypt
        </button>
      </footer>
    </div>
  </div>
</div>
`;

exports[`ConfirmDecryptMessage Component matches snapshot if no unapproved decrypt messages 1`] = `<div />`;

exports[`ConfirmDecryptMessage Component shows error on decrypt inline error 1`] = `
<div>
  <div
    class="request-decrypt-message__container"
  >
    <div
      class="request-decrypt-message__header"
    >
      <div
        class="request-decrypt-message__header-background"
      />
      <div
        class="request-decrypt-message__header__text"
      >
        Decrypt request
      </div>
      <div
        class="request-decrypt-message__header__tip-container"
      >
        <div
          class="request-decrypt-message__header__tip"
        />
      </div>
    </div>
    <div
      class="request-decrypt-message__body"
    >
      <div
        class="request-decrypt-message__account-info"
      >
        <div
          class="request-decrypt-message__account"
        >
          <div
            class="request-decrypt-message__account-text"
          >
            Account:
          </div>
          <div
            class="request-decrypt-message__account-item"
          >
            <div
              class="account-list-item undefined"
              data-testid="account-list-item"
            >
              <div
                class="account-list-item__top-row items-center gap-2"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-md h-6 w-6"
                >
                  <div
                    class="flex [&>div]:!rounded-none"
                  >
                    <div
                      style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 24px; height: 24px; display: inline-block; background: rgb(250, 58, 0);"
                    >
                      <svg
                        height="24"
                        width="24"
                        x="0"
                        y="0"
                      >
                        <rect
                          fill="#18CDF2"
                          height="24"
                          transform="translate(-0.78629512784545 -2.47821305209537) rotate(328.9 12.00000000000000 12.00000000000000)"
                          width="24"
                          x="0"
                          y="0"
                        />
                        <rect
                          fill="#035E56"
                          height="24"
                          transform="translate(-13.72384628162403 7.94434640381145) rotate(176.2 12.00000000000000 12.00000000000000)"
                          width="24"
                          x="0"
                          y="0"
                        />
                        <rect
                          fill="#F26602"
                          height="24"
                          transform="translate(12.50088151366794 -10.65385479224781) rotate(468.9 12.00000000000000 12.00000000000000)"
                          width="24"
                          x="0"
                          y="0"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="account-list-item__account-name"
                >
                  Test Account
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="request-decrypt-message__balance"
        >
          <div
            class="request-decrypt-message__balance-text"
          >
            Balance:
          </div>
          <div
            class="request-decrypt-message__balance-value"
          >
            966.987986 ETH
          </div>
        </div>
      </div>
      <div
        class="request-decrypt-message__visual"
      >
        <section>
          <i
            class="request-decrypt-message__visual-identicon--default"
          >
            T
          </i>
          <div
            class="request-decrypt-message__notice"
          >
            test would like to read this message to complete your action
          </div>
        </section>
      </div>
      <div
        class="request-decrypt-message__message-container"
      >
        <div
          class="request-decrypt-message__message"
        >
          <div
            class="request-decrypt-message__message-text"
          >
            
            This message cannot be decrypted due to error: Decrypt inline error
          </div>
          <div
            class="request-decrypt-message__message-cover request-decrypt-message__message-lock--pressed"
          />
          <div
            class="request-decrypt-message__message-lock request-decrypt-message__message-lock--pressed"
            data-testid="message-lock"
          >
            <div
              class="request-decrypt-message__message-lock__container"
            >
              <i
                class="fa fa-lock fa-lg request-decrypt-message__message-lock__container__icon"
              />
              <div
                class="request-decrypt-message__message-lock__container__text"
              >
                Decrypt message
              </div>
            </div>
          </div>
        </div>
        <div />
      </div>
    </div>
    <div
      class="page-container__footer"
    >
      <footer>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block page-container__footer-button page-container__footer-button__cancel mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-muted mm-box--rounded-xl"
          data-testid="page-container-footer-cancel"
        >
          Cancel
        </button>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block page-container__footer-button mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-inverse mm-box--background-color-icon-default mm-box--rounded-xl"
          data-testid="page-container-footer-next"
        >
          Decrypt
        </button>
      </footer>
    </div>
  </div>
</div>
`;

exports[`ConfirmDecryptMessage Component shows the correct message data 1`] = `
<div>
  <div
    class="request-decrypt-message__container"
  >
    <div
      class="request-decrypt-message__header"
    >
      <div
        class="request-decrypt-message__header-background"
      />
      <div
        class="request-decrypt-message__header__text"
      >
        Decrypt request
      </div>
      <div
        class="request-decrypt-message__header__tip-container"
      >
        <div
          class="request-decrypt-message__header__tip"
        />
      </div>
    </div>
    <div
      class="request-decrypt-message__body"
    >
      <div
        class="request-decrypt-message__account-info"
      >
        <div
          class="request-decrypt-message__account"
        >
          <div
            class="request-decrypt-message__account-text"
          >
            Account:
          </div>
          <div
            class="request-decrypt-message__account-item"
          >
            <div
              class="account-list-item undefined"
              data-testid="account-list-item"
            >
              <div
                class="account-list-item__top-row items-center gap-2"
              >
                <div
                  class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-md h-6 w-6"
                >
                  <div
                    class="flex [&>div]:!rounded-none"
                  >
                    <div
                      style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 24px; height: 24px; display: inline-block; background: rgb(250, 58, 0);"
                    >
                      <svg
                        height="24"
                        width="24"
                        x="0"
                        y="0"
                      >
                        <rect
                          fill="#18CDF2"
                          height="24"
                          transform="translate(-0.78629512784545 -2.47821305209537) rotate(328.9 12.00000000000000 12.00000000000000)"
                          width="24"
                          x="0"
                          y="0"
                        />
                        <rect
                          fill="#035E56"
                          height="24"
                          transform="translate(-13.72384628162403 7.94434640381145) rotate(176.2 12.00000000000000 12.00000000000000)"
                          width="24"
                          x="0"
                          y="0"
                        />
                        <rect
                          fill="#F26602"
                          height="24"
                          transform="translate(12.50088151366794 -10.65385479224781) rotate(468.9 12.00000000000000 12.00000000000000)"
                          width="24"
                          x="0"
                          y="0"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="account-list-item__account-name"
                >
                  Test Account
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="request-decrypt-message__balance"
        >
          <div
            class="request-decrypt-message__balance-text"
          >
            Balance:
          </div>
          <div
            class="request-decrypt-message__balance-value"
          >
            966.987986 ETH
          </div>
        </div>
      </div>
      <div
        class="request-decrypt-message__visual"
      >
        <section>
          <i
            class="request-decrypt-message__visual-identicon--default"
          >
            T
          </i>
          <div
            class="request-decrypt-message__notice"
          >
            test would like to read this message to complete your action
          </div>
        </section>
      </div>
      <div
        class="request-decrypt-message__message-container"
      >
        <div
          class="request-decrypt-message__message"
        >
          <div
            class="request-decrypt-message__message-text"
          >
            raw message
            
          </div>
          <div
            class="request-decrypt-message__message-cover request-decrypt-message__message-lock--pressed"
          />
          <div
            class="request-decrypt-message__message-lock request-decrypt-message__message-lock--pressed"
            data-testid="message-lock"
          >
            <div
              class="request-decrypt-message__message-lock__container"
            >
              <i
                class="fa fa-lock fa-lg request-decrypt-message__message-lock__container__icon"
              />
              <div
                class="request-decrypt-message__message-lock__container__text"
              >
                Decrypt message
              </div>
            </div>
          </div>
        </div>
        <div
          class="request-decrypt-message__message-copy"
          data-testid="message-copy"
        >
          <div
            class="request-decrypt-message__message-copy-tooltip"
          >
            <div
              aria-describedby="tippy-tooltip-1"
              class=""
              data-original-title="Copy to clipboard"
              data-tooltipped=""
              style="display: flex; align-items: center;"
              tabindex="0"
            >
              <div
                class="request-decrypt-message__message-copy-text"
              >
                Copy encrypted message
              </div>
              <span
                class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-primary-default"
                style="mask-image: url('./images/icons/copy.svg');"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="page-container__footer"
    >
      <footer>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block page-container__footer-button page-container__footer-button__cancel mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-muted mm-box--rounded-xl"
          data-testid="page-container-footer-cancel"
        >
          Cancel
        </button>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block page-container__footer-button mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-inverse mm-box--background-color-icon-default mm-box--rounded-xl"
          data-testid="page-container-footer-next"
        >
          Decrypt
        </button>
      </footer>
    </div>
  </div>
</div>
`;
